<resources>
    <string name="app_name">Films by Adrian Lopez</string>
    <string name="filmListViewTitle">Film List</string>
    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
    </string>
    <string name="filmDetailsViewTitle">Film details</string>
    <string name="redirect_to_login_message">Redirigiendo a la pantalla de registro.</string>
    <string name="directed_by_prefix">Directed by</string>
    <string name="toolsTitleFilm">Title of the film</string>
    <string name="hintReleaseDate">Release Date</string>
    <string name="releaseDateLabel">Released on</string>
    <string name="durationLabel">Duration</string>
    <string name="hintTitle">Title</string>
    <string name="filmInfoLabel">Film\'s Info</string>
    <string name="hintDuration">Duration (mins)</string>
    <string name="directorInfoLabel">Director\'s Info</string>
    <string name="hintPhoneNumber">Phone Number</string>
    <string name="othersFilmDetailLabel">Others</string>
    <string name="hintImageUrl">Url to the poster</string>
    <string name="hintSummary">Summary</string>
    <string name="editActFABContentDescription">Confirm film edit</string>
    <string name="registerButton">Register</string>
    <string name="loginText">Log in</string>
    <string name="hintPassword">Password</string>
    <string name="hintUsername">Username</string>
    <string name="loginButton">Log in</string>
    <string name="registerLabel">User Info</string>
    <string name="hintEmail">Email</string>
    <string name="hintDuplicatePassword">Insert the password again</string>
    <string name="singButton">Sign</string>
    <string name="newFilmActivityTitle">New Film Info</string>
    <string name="editActNoChangesToast">No changes were made</string>
    <string name="editActLeaveTitle">Exiting Edit Screen</string>
    <string name="editActLeaveMessage">Changes won\'t be saved. Are you sure you want to leave?</string>
    <string name="editActLeaveButton">Leave</string>
    <string name="editActStayButton">Stay</string>
    <string name="registerActTitle">Creating new account</string>
    <string name="registerActErrorToast">Some value is incorrect</string>
    <string name="releasedOnPrefix">Released on</string>
    <string name="usernameFieldName">username</string>
    <string name="emailFieldName">email</string>
    <string name="passwordFieldName">password</string>
    <string name="registration_error_non_matching_passwords">The introduced passwords don\'t match</string>
    <string name="registration_error_non_valid_email">The given email is not valid.</string>
    <!-- some of the following texts will be formatted internally, thus no $1-->
    <string name="registration_error_min_chars_password">The password needs at least %d characters.</string>
    <string name="registration_error_max_chars_password">The password can\'t have more than %d characters.</string>
    <string name="registration_error_empty_field">The field %s can\'t be empty.</string>
</resources>